force-app/main/default/objects/Knowledge__kav/fields/SPEN_DataCategories__c.field-meta.xml
<CustomField>
    <fullName>SPEN_DataCategories__c</fullName>
    <inlineHelpText>Used to sync data categories associated to the article</inlineHelpText>
    <label>Data Categories</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Third Party Damage</fullName>
            </value>
            <value>
                <fullName>Streetworks</fullName>
            </value>
            <value>
                <fullName>NRSWA</fullName>
            </value>
            <value>
                <fullName>Complaints</fullName>
            </value>
            <value>
                <fullName>Connection</fullName>
            </value>
            <value>
                <fullName>Neutral Faults</fullName>
            </value>
            <value>
                <fullName>Guaranteed Standards</fullName>
            </value>
            <value>
                <fullName>DCC</fullName>
            </value>
            <value>
                <fullName>Incident Control</fullName>
            </value>
            <value>
                <fullName>General Enquiries</fullName>
            </value>
            <value>
                <fullName>Referrals</fullName>
            </value>
            <value>
                <fullName>Connections Services</fullName>
            </value>
            <value>
                <fullName>Planned Outages</fullName>
            </value>
            <value>
                <fullName>Third Party Damage(restricted)</fullName>
            </value>
            <value>
                <fullName>Debt</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>