force-app/main/default/objects/Knowledge__kav/fields/SPEN_KnowledgeArticleLink__c.field-meta.xml
<CustomField>
    <fullName>SPEN_KnowledgeArticleLink__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>This field redirects to current Knowledge Article</description>
    <formula>HYPERLINK(&quot;/lightning/r/Knowledge__kav/&quot;&amp; Id &amp;&quot;/view&quot;,  Title ,&quot;_self&quot;)</formula>
    <label>Knowledge Article Link</label>
    <type>Text</type>
</CustomField>