force-app/main/default/objects/Knowledge__kav/fields/SPEN_LastReviewOutcome__c.field-meta.xml
<CustomField>
    <fullName>SPEN_LastReviewOutcome__c</fullName>
    <label>Last Review Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Reviewed, Change Required</fullName>
            </value>
            <value>
                <fullName>Reviewed, No Change Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>