force-app/main/default/objects/Knowledge__kav/listViews/ComplaintsGS_NF_Articles.listView-meta.xml
<ListView>
    <fullName>ComplaintsGS_NF_Articles</fullName>
    <columns>TITLE</columns>
    <columns>ABSTRACT</columns>
    <columns>OWNER_ID</columns>
    <columns>VALIDATION_STATUS_ENUM</columns>
    <columns>PUBLISH_STATUS</columns>
    <columns>LAST_PUBLISHED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>TITLE</field>
        <operation>startsWith</operation>
        <value>Complaints,Neutral Fault,Guaranteed Standards</value>
    </filters>
    <filters>
        <field>PUBLISH_STATUS</field>
        <operation>equals</operation>
        <value>2</value>
    </filters>
    <label>Complaints/GS/NF Articles</label>
</ListView>