force-app/main/default/objects/Knowledge__kav/listViews/Connections_Articles.listView-meta.xml
<ListView>
    <fullName>Connections_Articles</fullName>
    <columns>TITLE</columns>
    <columns>ARTICLE_NUMBER</columns>
    <columns>ABSTRACT</columns>
    <columns>OWNER_ID</columns>
    <columns>LAST_PUBLISHED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>TITLE</field>
        <operation>startsWith</operation>
        <value>Con</value>
    </filters>
    <label>Connections Articles</label>
</ListView>