force-app/main/default/objects/Knowledge__kav/listViews/Copy_of_DCC_Articles.listView-meta.xml
<ListView>
    <fullName>Copy_of_DCC_Articles</fullName>
    <columns>TITLE</columns>
    <columns>ARTICLE_NUMBER</columns>
    <columns>ABSTRACT</columns>
    <columns>OWNER_ID</columns>
    <columns>LAST_PUBLISHED_DATE</columns>
    <columns>PUBLISH_STATUS</columns>
    <columns>VALIDATION_STATUS_ENUM</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>TITLE</field>
        <operation>contains</operation>
        <value>IC - SPD</value>
    </filters>
    <label>IC Articles</label>
</ListView>