force-app/main/default/objects/Knowledge__kav/listViews/DCC_Articles.listView-meta.xml
<ListView>
    <fullName>DCC_Articles</fullName>
    <columns>TITLE</columns>
    <columns>ABSTRACT</columns>
    <columns>OWNER_ID</columns>
    <columns>VALIDATION_STATUS_ENUM</columns>
    <columns>PUBLISH_STATUS</columns>
    <columns>LAST_PUBLISHED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>TITLE</field>
        <operation>contains</operation>
        <value>DCC</value>
    </filters>
    <filters>
        <field>VALIDATION_STATUS_ENUM</field>
        <operation>equals</operation>
        <value>Validated</value>
    </filters>
    <filters>
        <field>PUBLISH_STATUS</field>
        <operation>equals</operation>
        <value>2</value>
    </filters>
    <label>DCC Articles</label>
</ListView>