force-app/main/default/objects/Knowledge__kav/listViews/draft_articles.listView-meta.xml
<ListView>
    <fullName>draft_articles</fullName>
    <columns>TITLE</columns>
    <columns>ABSTRACT</columns>
    <columns>ARTICLE_NUMBER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>SPEN_DataCategories__c</columns>
    <columns>VALIDATION_STATUS_ENUM</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>OWNER_ID</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PUBLISH_STATUS</field>
        <operation>notEqual</operation>
        <value>2</value>
    </filters>
    <label>Draft Articles</label>
</ListView>