force-app/main/default/objects/Knowledge__kav/listViews/GE_Articles.listView-meta.xml
<ListView>
    <fullName>GE_Articles</fullName>
    <columns>TITLE</columns>
    <columns>ARTICLE_NUMBER</columns>
    <columns>ABSTRACT</columns>
    <columns>OWNER_ID</columns>
    <columns>VALIDATION_STATUS_ENUM</columns>
    <columns>PUBLISH_STATUS</columns>
    <columns>LAST_PUBLISHED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>TITLE</field>
        <operation>startsWith</operation>
        <value>GE</value>
    </filters>
    <filters>
        <field>PUBLISH_STATUS</field>
        <operation>equals</operation>
        <value>2</value>
    </filters>
    <label>GE Articles</label>
</ListView>