force-app/main/default/objects/Knowledge__kav/listViews/SW_NRSWA_Articles.listView-meta.xml
<ListView>
    <fullName>SW_NRSWA_Articles</fullName>
    <columns>TITLE</columns>
    <columns>RECORDTYPE</columns>
    <columns>ARTICLE_NUMBER</columns>
    <columns>ABSTRACT</columns>
    <columns>OWNER_ID</columns>
    <columns>LAST_PUBLISHED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>TITLE</field>
        <operation>startsWith</operation>
        <value>SW,NRSWA</value>
    </filters>
    <filters>
        <field>PUBLISH_STATUS</field>
        <operation>equals</operation>
        <value>2</value>
    </filters>
    <label>SW/NRSWA Articles</label>
</ListView>